bug fix in breadcrumb out of screen

--- a/assets/styles/modules/product/_carousel.scss
+++ b/assets/styles/modules/product/_carousel.scss
@@ -16,7 +16,7 @@
 		height: 11vh;
 		min-height: 11vh;
 		width: 95%;
-		margin: 0 auto 2.5em;
+		margin: .25em auto 1em;
 
 		& .carousel__cell{
 			width: 28%;
