--- a/assets/styles/modules/products/_breadcrumbs.scss
+++ b/assets/styles/modules/products/_breadcrumbs.scss
@@ -1,9 +1,11 @@
+
 .my_dropdown {
 	position: relative;
 	display: inline-block;
 
 	&__content {
 		display: none;
+		right: 0;
 		position: absolute;
 		background-color: #f9f9f9;
 		min-width: 160px;
