--- a/public_html/bundles/conceptos/14ndy15/styles/product.css
+++ b/public_html/bundles/conceptos/14ndy15/styles/product.css
@@ -222,7 +222,7 @@ https://flickity.metafizzy.co
     height: 11vh;
     min-height: 11vh;
     width: 95%;
-    margin: 0 auto 2.5em; }
+    margin: .25em auto 1em; }
   .carousel--small .carousel__cell {
       width: 28%;
       margin: 0 .25em; }
