--- a/public_html/bundles/conceptos/14ndy15/styles/products.css
+++ b/public_html/bundles/conceptos/14ndy15/styles/products.css
@@ -3,6 +3,7 @@
   display: inline-block; }
   .my_dropdown__content {
     display: none;
+    right: 0;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
